2005-10-04  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-fm/hildon-file-chooser-dialog.c: 
        - removed automatical name entry selection after model has
          finished loading.
        - autonaming now selects the generated file name only if the user
          hasn't moved the cursor yet; otherwise the new cursor location
          is preserved.
          N#19311

2005-09-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.9.42

	N#16169 File dialog shows "Updating" for several minutes although
	directory doesn't have any files matching the mime-type requested
	by the application (but 100 others):
	
	* hildon-fm/hildon-fm/hildon-file-system-model.c
	(hildon_file_system_model_ensure_idle):
	hildon_file_selection_model_delayed_add_node_list_timeout idle
	handler priority lowered
	(hildon_file_system_model_delayed_add_node_list): model is now
	constructed breadth-first, not depth-first
	(_hildon_file_system_model_prioritize_folder): function added for
	moving a folder to the head of delayed_lists queue
	
	* hildon-fm/hildon-fm/hildon-file-system-model.h: added prototype
	for _hildon_file_system_model_prioritize_folder

	* hildon-fm/hildon-fm/hildon-file-selection.c
	(hildon_file_selection_selection_changed): now calls
	_hildon_file_system_model_prioritize_folder when the folder is
	changed.

2005-09-15  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.9.41

2005-09-15  Kristian Rietveld  <kris@imendio.com>

	* hildon-fm/hildon-file-system-model.c
	(hildon_file_system_model_kick_node): first emit the row_deleted
	signal, than actually delete the node from the tree. (the
	row_deleted signal can trigger unrefs for this node, which still
	need to be handled). N#17314

2005-09-14  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-fm/hildon-file-system-private.c
	(_hildon_file_system_create_file_name): Remove trailing spaces
	from MMC name. N#17823
	
2005-09-14  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.9.40
